tests/error/11_type_array_plus_scalar.mire
import std

pub fn main: () {
    set x = [1 2 3] :arr[i64 3]
    set y = x + 1
}